--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 *{
     font-family: 'Raleway', sans-serif;
+    color: #141E46;
+    background-color: #EEEEEE;
 }
+
+
+/* Palette Color 
+
+https://colorhunt.co/palette/053b50176b8764ccc5eeeeee
+
+
+#EEEEEE (Ice)
+
+#FF6969 
+
+#C70039 
+
+#141E46
+
+*/
