Menu-bar Itens Added

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,26 @@
-<p>menu-bar works!</p>
+<div class="menu-bar_container">
+
+    <div class="menu-bar_itens">
+
+        <ul>
+            <li>
+                About |
+            </li>
+            <li>
+                Projects |
+            </li>
+            <li>
+                Resume
+            </li>
+        </ul>
+
+    
+
+    </div>
+    
+    <div class="menu-bar_contact">
+
+    </div>
+
+
+</div>
