--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 *{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+
+}
+
+
+body {
     color: #141E46;
     background-color: #EEEEEE;
 }
-
 
 /* Palette Color 
 
