--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -4,21 +4,21 @@
 
         <ul>
             <li>
-                About |
+                <a href="#">About</a> |
             </li>
             <li>
-                Projects |
+                <a href="#"> Projects  </a> |
             </li>
             <li>
-                Resume
+               <a href="#">  Resume </a>
             </li>
         </ul>
-
-    
 
     </div>
     
     <div class="menu-bar_contact">
+
+
 
     </div>
 
