--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,7 +1,7 @@
 .menu-bar_container {
     background-color: #141E46;
     color: #EEEEEE;
-    
+    box-shadow: 0px 33px 15px -19px rgba(0,0,0,0.3);    
     
     width: 100%;
     height: 10vh;
@@ -26,7 +26,7 @@
 
 .menu-bar_itens > ul > li > a:hover{
     font-weight: 500;
-    color: #C70039;
+    color: #FF6969;
 
 }
 
