Menu-bar Contact Icons Added

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -17,8 +17,15 @@
     </div>
     
     <div class="menu-bar_contact">
-
-
+        <a href="#">
+            <img src="/assets/linkedin.png" alt="LinkedIn">
+        </a>
+        <a href="#">
+            <img src="/assets/github.png" alt="Github">
+        </a>
+        <a href="#">
+            <img src="/assets/email.png" alt="">
+        </a>
 
     </div>
 
