--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     position: fixed;
+    justify-content: space-between;
 
 }
 
@@ -30,10 +31,24 @@
 
 }
 
-
-
 a {
     text-decoration: none;
     color: #EEEEEE;
 }
+
+.menu-bar_contact{
+    margin-right: 2rem;
+}
+
+
+.menu-bar_contact > a >img {
+    width:30px;
+    margin-left: 2rem;
+}
+
+.menu-bar_contact > a >img:hover {
+    width:32px;
+    
+}
+
 
