--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -17,13 +17,13 @@
     </div>
     
     <div class="menu-bar_contact">
-        <a href="#">
+        <a href="https://www.linkedin.com/in/max-victor/" target="_blank">
             <img src="/assets/linkedin.png" alt="LinkedIn">
         </a>
-        <a href="#">
+        <a href="https://github.com/maxfideles" target="_blank" >
             <img src="/assets/github.png" alt="Github">
         </a>
-        <a href="#">
+        <a href="mailto:maxfideles24@gmail.com">
             <img src="/assets/email.png" alt="">
         </a>
 
