Message Working in Progress Added

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -16,6 +16,10 @@
 
     </div>
     
+    <div class="menu-bar_name">
+        <span>Max</span>
+    </div>
+
     <div class="menu-bar_contact">
         <a href="https://www.linkedin.com/in/max-victor/" target="_blank">
             <img src="/assets/linkedin.png" alt="LinkedIn">
