--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -28,7 +28,7 @@
             <img src="/src/assets/github.png" alt="Github">
         </a>
         <a href="mailto:maxfideles24@gmail.com">
-            <img src="/src/assets/email.png" alt="Email">
+            <img src="../../../assets/email.png" alt="Email">
         </a>
 
     </div>
