--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -22,10 +22,10 @@
 
     <div class="menu-bar_contact">
         <a href="https://www.linkedin.com/in/max-victor/" target="_blank">
-            <img src="/src/assets/linkedin.png" alt="LinkedIn">
+            <img src="./assets/linkedin.png" alt="LinkedIn">
         </a>
         <a href="https://github.com/maxfideles" target="_blank" >
-            <img src="/src/assets/github.png" alt="Github">
+            <img src="./assets/github.png" alt="Github">
         </a>
         <a href="mailto:maxfideles24@gmail.com">
             <img src="./assets/email.png" alt="Email">
