--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -7,7 +7,7 @@
                 <a href="#">About</a> |
             </li>
             <li>
-                <a href="#"> Projects  </a> |
+                <a href="/projects"> Projects  </a> |
             </li>
             <li>
                <a href="#">  Resume </a>
