--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,7 +1,32 @@
 <div class="projects-container">
 
     <div class="project-title">
-        
+        <h1>Projects</h1>
+    </div>
+
+    <div class="list">
+        <ul>
+            <li>
+                <app-project-card 
+                [imgsrc]="'https://suneasy.netlify.app/assets/sunfacillogo-gray.png'" 
+                [title]="'SunEasy'"
+                [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
+                [stack1]="'https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png'"
+                [stack2]="'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'"
+                >
+                </app-project-card>
+            </li>
+            <li>
+                <app-project-card 
+                [imgsrc]="'https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/f6/37/c9/f637c9fb-1e7d-eb87-b586-8ce67d7d104d/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/460x0w.webp'" 
+                [title]="'SunFácil'"
+                [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
+                [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
+                [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
+                >
+                </app-project-card>
+            </li>
+        </ul>
     </div>
 
 </div>
