Goals SunEasy Added

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -10,9 +10,12 @@
                 <app-project-card 
                 [imgsrc]="'https://suneasy.netlify.app/assets/sunfacillogo-gray.png'" 
                 [title]="'SunEasy'"
-                [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
+                [description]="'A full-stack project that provides in a website the data and tools to project and study about solar energy systems. The main goals are:'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'"
+                [goal1]="'To support solar energy companies with a precise simulator'"
+                [goal2]="'To support students and researchs to have solar irradiations data for any city in Brazil'"
+                [goal3]="'To provide a comprehensive  catalog for Solar Panels and Inverters'"
                 >
                 </app-project-card>
             </li>
