--- a/src/app/pages/projects/project-card/project-card.component.html
+++ b/src/app/pages/projects/project-card/project-card.component.html
@@ -8,7 +8,13 @@
             <h3>{{title}}</h3>
         </div>
         <div class="description">
-            {{description}}
+            
+            <span>{{description}}</span>
+            <ul>
+                <li>{{goal1}}</li>
+                <li>{{goal2}}</li>
+                <li>{{goal3}}</li>
+            </ul>
         </div>
         <hr>
         <div class="icons">
