--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -13,6 +13,7 @@
                 [description]="'A full-stack project that provides in a website the data and tools to project and study about solar energy systems. The main goals are:'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'"
+                [stack3]="'https://user-images.githubusercontent.com/25181517/117201470-f6d56780-adec-11eb-8f7c-e70e376cfd07.png'"
                 [goal1]="'To support solar energy companies with a precise simulator'"
                 [goal2]="'To support students and researchs to have solar irradiations data for any city in Brazil'"
                 [goal3]="'To provide a comprehensive  catalog for Solar Panels and Inverters'"
@@ -26,6 +27,7 @@
                 [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
+                [goal1]="'Allow simulations without internet connection'"
                 >
                 </app-project-card>
             </li>
