--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -12,12 +12,16 @@ ul{
     width: 80%;
 }
 li{
-    border: 1px solid black;
+    
     border-radius: 1rem;
     list-style: none;
     margin-top: 1rem;
 }
 
+li:hover{
+    background-color: white;
+    box-shadow: 0px 0px 31px -2px rgba(0,0,0,0.2)    
+}
 
 app-project-card{
     width: 90%;
