--- a/src/app/pages/projects/project-card/project-card.component.html
+++ b/src/app/pages/projects/project-card/project-card.component.html
@@ -8,12 +8,12 @@
             <h3>{{title}}</h3>
         </div>
         <div class="description">
-            
+
             <span>{{description}}</span>
             <ul>
-                <li>{{goal1}}</li>
-                <li>{{goal2}}</li>
-                <li>{{goal3}}</li>
+                <li *ngIf="goal1!=null" >{{goal1}}</li>
+                <li *ngIf="goal2!=null">{{goal2}}</li>
+                <li *ngIf="goal3!=null" >{{goal3}}</li>
             </ul>
         </div>
         <hr>
@@ -21,6 +21,7 @@
             <div class="stacks">
                 <img [src]="stack1">
                 <img [src]="stack2">
+                <img [src]="stack3">
             </div>
         </div>
     </div>
