--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -2,24 +2,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 2rem;
 }
 .list{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 2rem;
 }
 ul{
     width: 80%;
 }
 li{
-    
+    border: solid 1px #053B50;
     border-radius: 1rem;
     list-style: none;
-    margin-top: 1rem;
+   
 }
 
 li:hover{
-    background-color: white;
     box-shadow: 0px 0px 31px -2px rgba(0,0,0,0.2)    
 }
 
