--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -8,29 +8,46 @@
         <ul>
             <li>
                 <app-project-card 
-                [imgsrc]="'https://suneasy.netlify.app/assets/sunfacillogo-gray.png'" 
+                [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
                 [title]="'SunEasy'"
+                [titleLink]="'https://apps.apple.com/gb/app/sunf%C3%A1cil/id6448203534'"
                 [description]="'A full-stack project that provides in a website the data and tools to project and study about solar energy systems. The main goals are:'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'"
                 [stack3]="'https://user-images.githubusercontent.com/25181517/117201470-f6d56780-adec-11eb-8f7c-e70e376cfd07.png'"
+                [stack4]="'https://user-images.githubusercontent.com/25181517/192107858-fe19f043-c502-4009-8c47-476fc89718ad.png'"
                 [goal1]="'To support solar energy companies with a precise simulator'"
                 [goal2]="'To support students and researchs to have solar irradiations data for any city in Brazil'"
                 [goal3]="'To provide a comprehensive  catalog for Solar Panels and Inverters'"
                 >
                 </app-project-card>
             </li>
+            <hr style="margin: 1rem;">
             <li>
                 <app-project-card 
-                [imgsrc]="'https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/f6/37/c9/f637c9fb-1e7d-eb87-b586-8ce67d7d104d/AppIcon-0-1x_U007emarketing-0-7-0-85-220.png/460x0w.webp'" 
-                [title]="'SunFácil'"
+                [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
+                [title]="'QRTap'"
+                [titleLink]="'https://apps.apple.com/gb/app/qrtap/id6448493011'"
                 [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
-                [goal1]="'Allow simulations without internet connection'"
-                >
+                [goal1]="'Allow simulations without internet connection'">
                 </app-project-card>
             </li>
+            <hr style="margin: 1rem;">
+            <li>
+                <app-project-card 
+                [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/G7v2wvNM9Ss?si=W2DM8mI4rGfiD_kp')" 
+                [title]="'InfoIP'"
+                [titleLink]="'https://apps.apple.com/gb/app/infoip/id6449855833'"
+                [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
+                [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
+                [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
+                [goal1]="'Allow simulations without internet connection'">
+                </app-project-card>
+                
+            </li>
+
         </ul>
     </div>
 
