--- a/src/app/pages/projects/project-card/project-card.component.css
+++ b/src/app/pages/projects/project-card/project-card.component.css
@@ -1,6 +1,7 @@
 .project-card-container{
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 .text{
     display: flex;
@@ -13,8 +14,10 @@
     margin-bottom: 0.5rem;
 }
 
-.image > *{
-    width: 90%;
+.iframe > *{
+    
+    padding: 0.5rem;
+    border-radius: 1rem;
 }
 
 .stacks > img{
@@ -29,11 +32,16 @@ hr{
     margin: 1rem;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover > h3{
+    font-weight: lighter;
+}
+
 /* For Mobile */
 @media(max-width:480px){
-    .image > *{
-        width: 200px;
-    }
     .text{
         margin-left: 0.2rem;
     }
@@ -44,4 +52,11 @@ hr{
     .project-card-container{
         flex-direction: column;
     }
+}
+/* small screems */
+@media(max-width: 395px){
+    .iframe > *{
+        width: 220px;
+    }
+
 }
