Sunfacil App Added

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -6,6 +6,7 @@
 
     <div class="list">
         <ul>
+            <!-- Suneasy
             <li>
                 <app-project-card 
                 [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
@@ -22,28 +23,50 @@
                 >
                 </app-project-card>
             </li>
+            
             <hr style="margin: 1rem;">
+            -->
+
             <li>
                 <app-project-card 
-                [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
-                [title]="'QRTap'"
-                [titleLink]="'https://apps.apple.com/gb/app/qrtap/id6448493011'"
-                [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
+                [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/lDlZhsJDWZ0?si=ewChxEA80ThuNLXF')" 
+                [title]="'SunFácil App'"
+                [titleLink]="'https://apps.apple.com/gb/app/sunf%C3%A1cil/id6448203534'"
+                [description]="'Sunfácil is a simulator for photovoltaic systems for all cities in Brazil. The irradiation data of each city were obtained from Cresesb.\n Within the same simulation parameters, the results can be compared with PVSol.'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
                 [goal1]="'Allow simulations without internet connection'">
                 </app-project-card>
             </li>
             <hr style="margin: 1rem;">
+
+            <li>
+                <app-project-card 
+                [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
+                [title]="'QRTap App'"
+                [titleLink]="'https://apps.apple.com/gb/app/qrtap/id6448493011'"
+                [description]="'Generate Qr Codes easily and quickly. Generate it for:'"
+                [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
+                [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
+                [goal1]="'Allow auto connection to a Wi-Fi'"
+                [goal2]="'Share an e-mail address'"
+                [goal3]="'Share an Url'"
+                >
+                </app-project-card>
+            </li>
+            <hr style="margin: 1rem;">
             <li>
                 <app-project-card 
                 [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/G7v2wvNM9Ss?si=W2DM8mI4rGfiD_kp')" 
-                [title]="'InfoIP'"
+                [title]="'InfoIP App'"
                 [titleLink]="'https://apps.apple.com/gb/app/infoip/id6449855833'"
-                [description]="'Web Application to provide everything to project and simulate a photovoltaic solar system.'"
+                [description]="'Monitore your network and know your IP addresses, and if your internet is working. With infoIP will be possible to know:'"
                 [stack1]="'https://user-images.githubusercontent.com/25181517/121406389-6267a300-c95e-11eb-8d67-f1e22afe8aea.png'"
                 [stack2]="'https://user-images.githubusercontent.com/25181517/186711578-bf30cb30-40b7-4b45-95a5-bdf837c372e7.png'"
-                [goal1]="'Allow simulations without internet connection'">
+                [goal1]="'Your local and public IP address'"
+                [goal2]="'The network connection type and internet provider'"
+                [goal3]="'Geolocation of your public IP'"
+                > 
                 </app-project-card>
                 
             </li>
