--- a/src/app/components/menu-bar/menu-bar.component.css
+++ b/src/app/components/menu-bar/menu-bar.component.css
@@ -1,14 +1,15 @@
 .menu-bar_container {
-    background-color: #141E46;
+    background-color: var(--dark-blue);
     color: #EEEEEE;
     box-shadow: 0px 33px 15px -19px rgba(0,0,0,0.3);    
     
-    width: 100%;
+    
     height: 10vh;
 
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 
 }
 
@@ -16,7 +17,7 @@
     display: flex;
     list-style: none;
     margin-left: 2rem;
-    
+    flex-wrap: wrap;
 }
 
 .menu-bar_itens > ul > li {
@@ -26,7 +27,7 @@
 
 .menu-bar_itens > ul > li > a:hover{
     font-weight: 500;
-    color: #FF6969;
+    color: var(--pink-hoover);
 
 }
 
@@ -40,15 +41,6 @@ a {
 }
 
 
-.menu-bar_contact > a >img {
-    width:30px;
-    margin-left: 2rem;
-}
-
-.menu-bar_contact > a >img:hover {
-    width:32px;
-    
-}
 
 
 
