--- a/src/app/pages/projects/project-card/project-card.component.html
+++ b/src/app/pages/projects/project-card/project-card.component.html
@@ -5,7 +5,7 @@
         </iframe>
     </div>
 
-    <div class="text">
+    <div class="text" style="width: 90%;">
         <div class="title">
             <a [href]="titleLink" target="_blank">
             <h3>{{title}}</h3>
