--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,7 +10,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
     color: white;
 }
 
