page activated style

--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -4,10 +4,16 @@
 
         <ul>
             <li>
-                <a href="#">About</a> |
+                <a routerLink="/home"
+                routerLinkActive="page-activated"
+                ariaCurrentWhenActive="page"
+                >About</a> |
             </li>
             <li>
-                <a routerLink="/projects"> Projects</a> |
+                <a routerLink="/projects"
+                routerLinkActive="page-activated"
+                ariaCurrentWhenActive="page"
+                > Projects</a> |
             </li>
             <li>
                <a href="#">  Resume </a>
