stack 5 and 6 added

--- a/src/app/pages/projects/project-card/project-card.component.html
+++ b/src/app/pages/projects/project-card/project-card.component.html
@@ -27,6 +27,8 @@
                 <img [src]="stack2">
                 <img *ngIf="stack3!=null" [src]="stack3">
                 <img *ngIf="stack4!=null" [src]="stack4">
+                <img *ngIf="stack5!=null" [src]="stack5">
+                <img *ngIf="stack6!=null" [src]="stack6">
 
             </div>
         </div>
