--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -6,7 +6,7 @@
 
     <div class="list">
         <ul>
-            <!-- Suneasy
+            
             <li>
                 <app-project-card 
                 [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
@@ -17,6 +17,8 @@
                 [stack2]="'https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png'"
                 [stack3]="'https://user-images.githubusercontent.com/25181517/117201470-f6d56780-adec-11eb-8f7c-e70e376cfd07.png'"
                 [stack4]="'https://user-images.githubusercontent.com/25181517/192107858-fe19f043-c502-4009-8c47-476fc89718ad.png'"
+                [stack5]="'https://user-images.githubusercontent.com/25181517/183345125-9a7cd2e6-6ad6-436f-8490-44c903bef84c.png'"
+                [stack6]="'https://user-images.githubusercontent.com/25181517/182884894-d3fa6ee0-f2b4-4960-9961-64740f533f2a.png'"
                 [goal1]="'To support solar energy companies with a precise simulator'"
                 [goal2]="'To support students and researchs to have solar irradiations data for any city in Brazil'"
                 [goal3]="'To provide a comprehensive  catalog for Solar Panels and Inverters'"
@@ -25,7 +27,6 @@
             </li>
             
             <hr style="margin: 1rem;">
-            -->
 
             <li>
                 <app-project-card 
