--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<h1>Working in Progress... 👨🏽‍💻</h1>
+<div class="home-container">
+
+    <app-main-card></app-main-card>
+    <div style="padding: 5rem;">
+        <span style="display: flex; flex-direction: column; align-items: center; ">Working in Progress 👨🏽‍💻</span>
+    </div>
+
+</div>
