--- a/src/app/pages/home/main-card/main-card.component.css
+++ b/src/app/pages/home/main-card/main-card.component.css
@@ -33,8 +33,11 @@
 
 @media (max-width:400px) {
 
-    h1{
-        size: 12pt;
+    .main-card-container{
+        flex-direction: column;
+    }
+    .pic > img{
+        height: 300px;
     }
     
 }
