Home Message Updated

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 
     <app-main-card></app-main-card>
     <div style="padding: 5rem;">
-        <h2 style="display: flex; flex-direction: column; align-items: center; ">Working in Progress 👨🏽‍💻</h2>
+        <h2 style="display: flex; flex-direction: column; align-items: center; ">Work in Progress</h2>
     </div>
 
 </div>
