--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -7,7 +7,7 @@
                 <a routerLink="/home"
                 routerLinkActive="page-activated"
                 ariaCurrentWhenActive="page"
-                >About</a> |
+                >Home</a> |
             </li>
             <li>
                 <a routerLink="/projects"
