--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,37 @@
 <div class="home-container">
 
     <app-main-card></app-main-card>
-    <div style="padding: 5rem;">
-        <h2 style="display: flex; flex-direction: column; align-items: center; ">Work in Progress</h2>
+    <div class="summary">
+        <h2 style="display: flex; flex-direction: column; align-items: center; ">Summary</h2>
+        <h3 style="text-align: justify;">I'm Max, a 28-year-old electrical engineer and experience over 10 years in technology.br 
+              After a transformative year abroad on an international exchange program in the UK,
+              I decided to follow a career as a software developer. I am specializing in crafting highly
+              scalable web applications, leveraging technologies like Spring Boot and Angular, and applying
+              advanced software architecture principles. My ultimate aspiration is to use technology to make 
+              a positive impact on people's lives</h3>
+    </div>
+    <div class="tech">
+        <h2 style="display: flex; flex-direction: column; align-items: center; ">Technologies</h2>
+        <div style="display: flex; flex-direction: column; align-items: center;">
+            <table>
+                <tr>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png" alt="Angular" title="Angular"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png" alt="Java" title="Java"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/117207242-07d5a700-adf4-11eb-975e-be04e62b984b.png" alt="Maven" title="Maven"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/117201470-f6d56780-adec-11eb-8f7c-e70e376cfd07.png" alt="Spring" title="Spring"/></code></td>
+                    <td><code><img width="65" src="/assets/spring-security-logo.png" alt="Spring Security" title="Spring Security"/></code></td>
+                    <td><code><img width="75" src="https://seeklogo.com/images/J/jwt-logo-65D86B4640-seeklogo.com.png" alt="JWT" title="JWT"/></code></td>
+                </tr>
+                <tr>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/192107858-fe19f043-c502-4009-8c47-476fc89718ad.png" alt="REST" title="REST"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/186711335-a3729606-5a78-4496-9a36-06efcc74f800.png" alt="Swagger" title="Swagger"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/117208740-bfb78400-adf5-11eb-97bb-09072b6bedfc.png" alt="PostgreSQL" title="PostgreSQL"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/192108372-f71d70ac-7ae6-4c0d-8395-51d8870c2ef0.png" alt="Git" title="Git"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/192108890-200809d1-439c-4e23-90d3-b090cf9a4eea.png" alt="IntelliJ" title="IntelliJ"/></code></td>
+                    <td><code><img width="75" src="https://user-images.githubusercontent.com/25181517/192108891-d86b6220-e232-423a-bf5f-90903e6887c3.png" alt="Visual Studio Code" title="Visual Studio Code"/></code></td>
+                </tr>
+            </table>
+        </div>
     </div>
 
 </div>
