--- a/src/app/pages/home/main-card/main-card.component.html
+++ b/src/app/pages/home/main-card/main-card.component.html
@@ -1,7 +1,12 @@
 <div class="main-card-container">
     <div class="title">
-        <h1>Software Developer</h1>
-        <span>Fullstack - Angular/Java</span>
+        <div class="prof">
+            <ul>
+                <li><h1>Software Developer</h1></li>
+                <li><h1>Fullstack Developer</h1></li>
+            </ul>
+        </div>
+        <span>Angular/Java</span>
         <div align="center">
             <code><img width="30" src="https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png" alt="Angular" title="Angular"/></code>
             <code><img width="30" src="https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png" alt="Java" title="Java"/></code>
