refactor: summary updated

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,9 +3,9 @@
     <app-main-card></app-main-card>
     <div class="summary">
         <h2 style="display: flex; flex-direction: column; align-items: center; ">Summary</h2>
-        <h3 style="text-align: justify;">I'm Max, a 29-year-old electrical engineer and experience over 10 years in technology.br 
+        <h3 style="text-align: justify;">I'm Max, a 29-year-old electrical engineer and experience over 10 years in technology. 
               After a transformative year abroad on an international exchange program in the UK,
-              I decided to follow a career as a software developer. I am specializing in crafting highly
+              I decided to transition my career  to a more promising market such as software engineering in order to follow my passion for technology, market tendencies and seek for a better long-term career. <br> I am specializing in crafting highly
               scalable web applications, leveraging technologies like Spring Boot and Angular, and applying
               advanced software architecture principles. My ultimate aspiration is to use technology to make 
               a positive impact on people's lives</h3>
