--- a/src/app/pages/home/main-card/main-card.component.html
+++ b/src/app/pages/home/main-card/main-card.component.html
@@ -6,10 +6,10 @@
                 <li><h1>Fullstack Developer</h1></li>
             </ul>
         </div>
-        <span>Angular/Java</span>
-        <div align="center">
-            <code><img width="30" src="https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png" alt="Angular" title="Angular"/></code>
+        <span>Java / Angular</span>
+        <div align="center" style="display: flex; gap: 1rem;">
             <code><img width="30" src="https://user-images.githubusercontent.com/25181517/117201156-9a724800-adec-11eb-9a9d-3cd0f67da4bc.png" alt="Java" title="Java"/></code>
+            <code><img width="30" src="https://user-images.githubusercontent.com/25181517/183890595-779a7e64-3f43-4634-bad2-eceef4e80268.png" alt="Angular" title="Angular"/></code>
         </div>
         
     </div>
