--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -10,18 +10,115 @@
     align-items: center;
     margin-bottom: 2rem;
 }
-ul{
-    width: 80%;
-}
-li{
-    border: solid 1px #053B50;
-    border-radius: 1rem;
-    list-style: none;
-   
+
+.project{
+    display: flex;
+    gap: 1rem;
+    margin: 2rem 2rem;
+    margin-bottom: 5rem;
+
+    h1,h2{
+        margin-top: .5rem;
+        margin-bottom: .2rem;
+    }
+
+
+    .imgButtons{
+        display: flex;
+        flex-direction: column;
+
+        li{
+            list-style: none;
+        }
+
+        .projectimg{
+            width: 420px;
+            height: 220px;
+            border-radius: 1rem;
+            box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+            transition: transform .4s ease-in-out;
+        }
+
+        .projectimg:hover{
+            transform: scale(1.05);
+        }
+
+        .stacks ul{
+            display: flex;
+            justify-items: center;
+            justify-content: space-around;
+            padding-top: 1.5rem;
+            gap: .5rem;
+        }
+
+        .buttons {
+            display: flex;
+            align-items: center;
+            margin-top: 1rem;
+
+            img{
+                left: 19rem;
+                position: absolute;
+                filter: opacity(0%);
+                transition: left .4s ease-in-out , filter .5s ease-in-out;
+                background-color: #285ee8;
+            }
+        
+            a{
+            display: flex;
+            align-items: center;
+            align-self: center;
+            margin: auto;
+            padding: .8rem;
+            width: 45%;
+
+            border-radius: 1rem;
+
+            background-color: #3d7ef4;
+            border: solid 1px #285ee8;
+            color: #EEEEEE;
+            text-decoration: none;
+
+            transition: background-color .8s ease-in-out;
+
+            p,img{
+                margin: auto;
+            }
+
+            }
+        }
+
+        .buttons:hover{
+            img{
+                left: 19.5rem;
+                filter: opacity(100%)
+            }
+            a{
+            background-color: #285ee8;
+            }
+        }
+
+        .buttons:active {
+            a,img{
+            background-color: #1f4ad6;
+        }
+
+    }
+    }
+        
 }
 
-li:hover{
-    box-shadow: 0px 0px 31px -2px rgba(0,0,0,0.2)    
+
+
+ul{
+    width: 90%;
+    li{
+        padding: .2rem;
+    }
+}
+
+li{
+    margin-left: 2rem; 
 }
 
 app-project-card{
