--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,9 +4,182 @@
         <h1>Projects</h1>
     </div>
 
+
+    <!--SunFácil-->
+    <div class="project">
+        <div class="imgButtons">
+            <img class="projectimg" src="./assets/sunfacil.png" alt="">
+            <div class="stacks">
+                <ul>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" title="Java"/>
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/spring/spring-original.svg" alt="Spring Framework" title="Spring Framework" />
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg" alt="Angular" title="Angular"/>
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/swift/swift-original.svg" alt="Swift" title="Swift"/>
+                    </li>
+                    <li>
+                      <svg viewBox="0 0 128 128" width="30px" alt="Railway" title="Railway">
+                        <path fill="#000000" d="M63.9316 0C39.994 0 19.1642 13.1447 8.1641 32.5762c8.5963-.018 25.3379-.0274 25.3379-.0274h.0039v-.0078c19.7886 0 20.523.0886 24.3886.25l2.3946.088c8.3375.278 18.585 1.1746 26.6484 7.2753 4.3769 3.3089 10.6958 10.6115 14.4629 15.8145 3.4826 4.8123 4.485 10.3442 2.1172 15.6445-2.1795 4.8712-6.868 7.7773-12.5469 7.7773H2.0859s.529 2.2429 1.3223 4.7188h121.33A63.7981 63.7981 0 0 0 128 64.0274C128.0012 28.6694 99.3164 0 63.9316 0zM33.4863 38.9668c-9.0846 0-18.9606.0232-28.5781.0488-1.245 3.3605-2.4447 6.6179-3.0293 9.2676h49.8203v6.4883H.5938A65.0891 65.0891 0 0 0 0 61.2168h97.2246c-.3395-.6633-.7959-1.2605-1.2558-1.8457-16.6213-21.4739-25.5615-19.6127-38.3516-20.1582-4.2643-.1754-7.1574-.2461-24.1309-.2461zM.0508 67.7128c.1025 1.7315.2628 3.4379.496 5.1231h90.4239c4.031 0 6.2867-2.2853 7.0195-5.123H.0508zM5.627 90.5392S20.6168 127.3462 63.9316 128c25.889 0 48.1338-15.375 58.2383-37.461H5.627z"></path>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+            <div class="buttons">
+                <a href="https://sunfacil.com" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.png">
+            </div>
+        </div>
+        <hr>
+        <div class="text">
+            <h1>Sunfácil</h1>
+            <h3>Personal Project</h3>
+            <h4>Sales management web system for a medium-sized travel agency in my hometown.</h4>
+            <h2>Problem:</h2>
+            <p>With two offices in different cities and numerous travel agents, the owner responsible for sales management used to receive an Excel spreadsheet from each employee at the end of the month to process profits and commissions. This system caused delays and inconsistencies, as employees could input and edit information freely, leading to a lack of standardization and reliability.</p>
+            <h2>Solution:</h2>
+            <p>A web-based system that centralizes sales records in a database, with role-based authentication and authorization for travel agents and management staffs.</p>
+            <h2>More info</h2>
+            <ul>
+                <li>An end-to-end application was developed using full-stack technologies, including TypeScript/Angular for the frontend, Java/Spring Boot for the backend, and Swift for the native iOS app, enabling a consistent experience across multiple platforms;</li>
+                <li>The application features a highly accurate simulator for analyzing photovoltaic systems in over 5,000 Brazilian cities, employing advanced engineering methods to compete effectively with global market leaders;</li>
+                <li>A vast amount of solar irradiation data from all Brazilian cities, collected by the National Institute for Space Research, was processed using Business Intelligence (BI) tools and optimally stored in a dedicated PostgreSQL database;</li>
+                <li>Effective communication between the system's components was established via RESTful API requests, ensuring smooth and efficient integration between the frontend and backend. This approach not only ensures interoperability between the different project elements but also promotes robust scalability and simplified maintenance throughout the application's lifecycle;</li>
+                <li>Swagger was used to automate the generation of API documentation, ensuring accurate and up-to-date documentation;</li>
+                <li>Deployment was carried out in an efficient and organized manner, using the Railway platform for the backend and Netlify for the frontend, ensuring fast and stable project delivery.</li>
+            </ul>
+        </div>
+    </div>
+
+    <!--Chi Voto-->
+    <div class="project">
+            <div class="imgButtons">
+                <img class="projectimg" src="./assets/chivoto.png" alt="">
+                <div class="stacks">
+                    <ul>
+                        <li>
+                            <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" title="Java"/>
+                        </li>
+                        <li>
+                            <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/spring/spring-original.svg" alt="Spring Framework" title="Spring Framework" />
+                        </li>
+                        <li>
+                            <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg" alt="Angular" title="Angular"/>
+                        </li>
+                        <li>
+                          <svg viewBox="0 0 128 128" width="30px" alt="Railway" title="Railway">
+                            <path fill="#000000" d="M63.9316 0C39.994 0 19.1642 13.1447 8.1641 32.5762c8.5963-.018 25.3379-.0274 25.3379-.0274h.0039v-.0078c19.7886 0 20.523.0886 24.3886.25l2.3946.088c8.3375.278 18.585 1.1746 26.6484 7.2753 4.3769 3.3089 10.6958 10.6115 14.4629 15.8145 3.4826 4.8123 4.485 10.3442 2.1172 15.6445-2.1795 4.8712-6.868 7.7773-12.5469 7.7773H2.0859s.529 2.2429 1.3223 4.7188h121.33A63.7981 63.7981 0 0 0 128 64.0274C128.0012 28.6694 99.3164 0 63.9316 0zM33.4863 38.9668c-9.0846 0-18.9606.0232-28.5781.0488-1.245 3.3605-2.4447 6.6179-3.0293 9.2676h49.8203v6.4883H.5938A65.0891 65.0891 0 0 0 0 61.2168h97.2246c-.3395-.6633-.7959-1.2605-1.2558-1.8457-16.6213-21.4739-25.5615-19.6127-38.3516-20.1582-4.2643-.1754-7.1574-.2461-24.1309-.2461zM.0508 67.7128c.1025 1.7315.2628 3.4379.496 5.1231h90.4239c4.031 0 6.2867-2.2853 7.0195-5.123H.0508zM5.627 90.5392S20.6168 127.3462 63.9316 128c25.889 0 48.1338-15.375 58.2383-37.461H5.627z"></path>
+                            </svg>
+                        </li>
+                    </ul>
+                </div>
+                <div class="buttons">
+                    <a href="https://chivoto.eu" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.png">
+                </div>
+            </div>
+            <hr>
+            <div class="text">
+                <h1>Chi Voto</h1>
+                <h3>Team Project</h3>
+                <h4>It is a web application that provides information for Italians citizens about the European Elections 2024.</h4>
+                <h2>Problem:</h2>
+                <p>With two offices in different cities and numerous travel agents, the owner responsible for sales management used to receive an Excel spreadsheet from each employee at the end of the month to process profits and commissions. This system caused delays and inconsistencies, as employees could input and edit information freely, leading to a lack of standardization and reliability.</p>
+                <h2>Solution:</h2>
+                <p>A web-based system that centralizes sales records in a database, with role-based authentication and authorization for travel agents and management staffs.</p>
+                <h2>More info</h2>
+                <ul>
+                    <li>A comprehensive full-stack application was developed using cutting-edge technologies. The frontend was built with TypeScript and Angular, while the backend utilized Java with Spring Boot, providing users with a robust and integrated experience;</li>
+                </ul>
+            </div>
+    </div>
+
+    <!--WJR Turismo-->
+    <div class="project">
+        <div class="imgButtons">
+            <img class="projectimg" src="./assets/wjr.png" alt="">
+            <div class="stacks">
+                <ul>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" title="Java"/>
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/spring/spring-original.svg" alt="Spring Framework" title="Spring Framework" />
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg" alt="Angular" title="Angular"/>
+                    </li>
+                    <li>
+                      <svg viewBox="0 0 128 128" width="30px" alt="Railway" title="Railway">
+                        <path fill="#000000" d="M63.9316 0C39.994 0 19.1642 13.1447 8.1641 32.5762c8.5963-.018 25.3379-.0274 25.3379-.0274h.0039v-.0078c19.7886 0 20.523.0886 24.3886.25l2.3946.088c8.3375.278 18.585 1.1746 26.6484 7.2753 4.3769 3.3089 10.6958 10.6115 14.4629 15.8145 3.4826 4.8123 4.485 10.3442 2.1172 15.6445-2.1795 4.8712-6.868 7.7773-12.5469 7.7773H2.0859s.529 2.2429 1.3223 4.7188h121.33A63.7981 63.7981 0 0 0 128 64.0274C128.0012 28.6694 99.3164 0 63.9316 0zM33.4863 38.9668c-9.0846 0-18.9606.0232-28.5781.0488-1.245 3.3605-2.4447 6.6179-3.0293 9.2676h49.8203v6.4883H.5938A65.0891 65.0891 0 0 0 0 61.2168h97.2246c-.3395-.6633-.7959-1.2605-1.2558-1.8457-16.6213-21.4739-25.5615-19.6127-38.3516-20.1582-4.2643-.1754-7.1574-.2461-24.1309-.2461zM.0508 67.7128c.1025 1.7315.2628 3.4379.496 5.1231h90.4239c4.031 0 6.2867-2.2853 7.0195-5.123H.0508zM5.627 90.5392S20.6168 127.3462 63.9316 128c25.889 0 48.1338-15.375 58.2383-37.461H5.627z"></path>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+            <div class="buttons">
+                <a href="https://wjrturismo.com.br" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.png">
+            </div>
+        </div>
+        <hr>
+        <div class="text">
+            <h1>WJR Turismo</h1>
+            <h3>Freelancing</h3>
+            <h4>Sales management web system for a medium-sized travel agency in my hometown.</h4>
+            <h2>Problem:</h2>
+            <p>With two offices in different cities and numerous travel agents, the owner responsible for sales management used to receive an Excel spreadsheet from each employee at the end of the month to process profits and commissions. This system caused delays and inconsistencies, as employees could input and edit information freely, leading to a lack of standardization and reliability.</p>
+            <h2>Solution:</h2>
+            <p>A web-based system that centralizes sales records in a database, with role-based authentication and authorization for travel agents and management staffs.</p>
+            <h2>More info</h2>
+            <ul>
+                <li>A comprehensive full-stack application was developed using cutting-edge technologies. The frontend was built with TypeScript and Angular, while the backend utilized Java with Spring Boot, providing users with a robust and integrated experience;</li>
+                <li>A highly secure authentication and authorization system based on roles was implemented, integrating Spring Security with Auth0 JWT tokens to secure the API. This ensures that only authorized users have access to specific resources;</li>
+                <li>On the frontend, precise access control based on user roles was established using Angular's Auth Guard, ensuring that only users with the appropriate permissions can access certain parts of the application. This guarantees security and data integrity;</li>
+                <li>Additionally, the user experience was optimized by implementing Progressive Web Application (PWA) functionality, allowing users to access the application quickly and efficiently, even under adverse network conditions, and offering a native experience on mobile devices;</li>
+                <li>The deployment was carried out in an efficient and organized manner, using the Railway platform for the backend and Hostinger for the frontend, ensuring a fast and stable delivery of the project.</li>
+            </ul>
+        </div>
+    </div>
+
+
+
+    <div class="buttons">
+        <a>  Read More</a>
+    </div>
+
     <div class="list">
+        <div class="project-card">
+            <div class="description">
+                <h2>SunFácil</h2>
+                <p>A full-stack project that provides in a website the data and tools to project and study about solar energy systems.</p>
+                <p>A revolutionary solution for the analysis and implementation of photovoltaic systems on a national scale!</p>
+
+            </div>
+            <div class="stacks">
+                <ul>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java" title="Java"/>
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/spring/spring-original.svg" alt="Spring Framework" title="Spring Framework" />
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/swift/swift-original.svg" alt="Swift" title="Swift"/>
+                    </li>
+                    <li>
+                        <img width="30px" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angular/angular-original.svg" alt="Angular" title="Angular"/>
+                    </li>
+                    <li>
+                      <svg viewBox="0 0 128 128" width="30px" alt="Railway" title="Railway">
+                        <path fill="#000000" d="M63.9316 0C39.994 0 19.1642 13.1447 8.1641 32.5762c8.5963-.018 25.3379-.0274 25.3379-.0274h.0039v-.0078c19.7886 0 20.523.0886 24.3886.25l2.3946.088c8.3375.278 18.585 1.1746 26.6484 7.2753 4.3769 3.3089 10.6958 10.6115 14.4629 15.8145 3.4826 4.8123 4.485 10.3442 2.1172 15.6445-2.1795 4.8712-6.868 7.7773-12.5469 7.7773H2.0859s.529 2.2429 1.3223 4.7188h121.33A63.7981 63.7981 0 0 0 128 64.0274C128.0012 28.6694 99.3164 0 63.9316 0zM33.4863 38.9668c-9.0846 0-18.9606.0232-28.5781.0488-1.245 3.3605-2.4447 6.6179-3.0293 9.2676h49.8203v6.4883H.5938A65.0891 65.0891 0 0 0 0 61.2168h97.2246c-.3395-.6633-.7959-1.2605-1.2558-1.8457-16.6213-21.4739-25.5615-19.6127-38.3516-20.1582-4.2643-.1754-7.1574-.2461-24.1309-.2461zM.0508 67.7128c.1025 1.7315.2628 3.4379.496 5.1231h90.4239c4.031 0 6.2867-2.2853 7.0195-5.123H.0508zM5.627 90.5392S20.6168 127.3462 63.9316 128c25.889 0 48.1338-15.375 58.2383-37.461H5.627z"></path>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <ul>
-        <!--
             <li>
                 <app-project-card 
                 [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/2TzrK_SMDSk?si=14ut1Qsd01jF5hWj')" 
@@ -27,7 +200,7 @@
             </li>
         
             <hr style="margin: 1rem;">
-        -->
+        
             <li>
                 <app-project-card 
                 [iframeSafeURL]="sanitazeUrl('https://www.youtube.com/embed/lDlZhsJDWZ0?si=ewChxEA80ThuNLXF')" 
