feat: flex direction media query

--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -125,3 +125,17 @@ app-project-card{
     width: 90%;
 }
 
+@media (max-width:725px){
+    .project{
+        flex-direction: column;
+    }
+
+    .buttons {
+        img{
+             display: none;
+        }
+    }
+
+
+}
+
