refactor: images converted into webp

--- a/src/app/pages/home/main-card/main-card.component.html
+++ b/src/app/pages/home/main-card/main-card.component.html
@@ -14,6 +14,6 @@
         
     </div>
     <div class="pic">
-        <img src="./assets/profile-pic.png">
+        <img src="./assets/profile-pic.webp">
     </div>
 </div>
