--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -8,7 +8,7 @@
     <!--SunFácil-->
     <div class="project">
         <div class="imgButtons">
-            <img class="projectimg" src="./assets/sunfacil.png" alt="">
+            <img class="projectimg" src="./assets/sunfacil.webp" alt="">
             <div class="stacks">
                 <ul>
                     <li>
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="buttons">
-                <a href="https://sunfacil.com" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.png">
+                <a href="https://sunfacil.com" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.webp">
             </div>
         </div>
         <hr>
@@ -58,7 +58,7 @@
     <!--Chi Voto-->
     <div class="project">
             <div class="imgButtons">
-                <img class="projectimg" src="./assets/chivoto.png" alt="">
+                <img class="projectimg" src="./assets/chivoto.webp" alt="">
                 <div class="stacks">
                     <ul>
                         <li>
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
                 <div class="buttons">
-                    <a href="https://chivoto.eu" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.png">
+                    <a href="https://chivoto.eu" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.webp">
                 </div>
             </div>
             <hr>
@@ -100,7 +100,7 @@
     <!--WJR Turismo-->
     <div class="project">
         <div class="imgButtons">
-            <img class="projectimg" src="./assets/wjr.png" alt="">
+            <img class="projectimg" src="./assets/wjr.webp" alt="">
             <div class="stacks">
                 <ul>
                     <li>
@@ -120,7 +120,7 @@
                 </ul>
             </div>
             <div class="buttons">
-                <a href="https://wjrturismo.com.br" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.png">
+                <a href="https://wjrturismo.com.br" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.webp">
             </div>
         </div>
         <hr>
