refactor: text updated

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -38,16 +38,17 @@
         <div class="text">
             <h1>Sunfácil</h1>
             <h3>Personal Project</h3>
-            <h4>Sales management web system for a medium-sized travel agency in my hometown.</h4>
+            <h4>A web application with an accurate simulator for predicting photovoltaic systems in over 5,000 Brazilian cities.</h4>
             <h2>Problem:</h2>
-            <p>With two offices in different cities and numerous travel agents, the owner responsible for sales management used to receive an Excel spreadsheet from each employee at the end of the month to process profits and commissions. This system caused delays and inconsistencies, as employees could input and edit information freely, leading to a lack of standardization and reliability.</p>
+            <p>The softwares that leads the global market to predict photovoltaic systems are paid and developed for desktop devices, and the web simulators do not use high enginneering parameters to simulate it precisely. Besides, does not exist a place where is possible to find the datasheet for solar panels and inverters independent of manufacter in one place.</p>
             <h2>Solution:</h2>
-            <p>A web-based system that centralizes sales records in a database, with role-based authentication and authorization for travel agents and management staffs.</p>
+            <p>Solar irradiance data collected by the Brazilian National Institute for Space Research (INPE) was parsed and stored, enabling the development of an accurate simulator that predicts the appropriate photovoltaic system for any city in Brazil through complex calculations. Additionally, a datasheet collection for solar panels and inverters was created, enabling the simulator to use electrical data from these datasheets based on the solar panel selected by the user. The simulation can be performed based on three parameters: annual electrical consumption, minimum available area, and the number of solar panels.</p>
             <h2>More info</h2>
             <ul>
                 <li>An end-to-end application was developed using full-stack technologies, including TypeScript/Angular for the frontend, Java/Spring Boot for the backend, and Swift for the native iOS app, enabling a consistent experience across multiple platforms;</li>
-                <li>The application features a highly accurate simulator for analyzing photovoltaic systems in over 5,000 Brazilian cities, employing advanced engineering methods to compete effectively with global market leaders;</li>
-                <li>A vast amount of solar irradiation data from all Brazilian cities, collected by the National Institute for Space Research, was processed using Business Intelligence (BI) tools and optimally stored in a dedicated PostgreSQL database;</li>
+                <li>The application features a highly accurate simulator for analyzing photovoltaic systems in over 5,000 Brazilian cities;</li>
+                <li>A vast amount of solar irradiance data from all Brazilian cities, collected by INPE, was processed using Business Intelligence (BI) tools and optimally stored in a dedicated PostgreSQL database;</li>
+                <li>Interactive charts were developed using the Chart.js library. Additionally, responsiveness for any device screen, including charts, is implemented across all pages.</li>
                 <li>Effective communication between the system's components was established via RESTful API requests, ensuring smooth and efficient integration between the frontend and backend. This approach not only ensures interoperability between the different project elements but also promotes robust scalability and simplified maintenance throughout the application's lifecycle;</li>
                 <li>Swagger was used to automate the generation of API documentation, ensuring accurate and up-to-date documentation;</li>
                 <li>Deployment was carried out in an efficient and organized manner, using the Railway platform for the backend and Netlify for the frontend, ensuring fast and stable project delivery.</li>
@@ -143,7 +144,7 @@
         </div>
     </div>
 
-
+ <!--
 
     <div class="buttons">
         <a>  Read More</a>
@@ -247,5 +248,5 @@
 
         </ul>
     </div>
-
+    -->
 </div>
