--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -47,8 +47,14 @@
             display: flex;
             justify-items: center;
             justify-content: space-around;
+            margin: auto;
+            
             padding-top: 1.5rem;
             gap: .5rem;
+        }
+
+        .stacks li{
+            margin: auto;
         }
 
         .buttons {
@@ -114,15 +120,36 @@ ul{
     width: 90%;
     li{
         padding: .2rem;
+        margin-left: 2rem;
     }
 }
 
-li{
-    margin-left: 2rem; 
-}
 
 app-project-card{
     width: 90%;
+}
+
+@media(max-width:425px){
+    .imgButtons{
+        width: 320px;  
+    }
+    .imgButtons .projectimg{
+        width: 100%;
+        height: 90%;
+    }
+
+    ul{
+        width: 100%;
+        
+        li{
+            margin-left: 0;
+        }
+    }
+
+    .text{
+        text-align: justify;
+    }
+
 }
 
 @media (max-width:725px){
