refactor: text and style

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -85,15 +85,17 @@
             <hr>
             <div class="text">
                 <h1>Chi Voto</h1>
-                <h3>Team Project</h3>
-                <h4>It is a web application that provides information for Italians citizens about the European Elections 2024.</h4>
+                <h3>Social Project</h3>
+                <h4>A web application that provides information for Italians citizens about the European Elections 2024.</h4>
                 <h2>Problem:</h2>
-                <p>With two offices in different cities and numerous travel agents, the owner responsible for sales management used to receive an Excel spreadsheet from each employee at the end of the month to process profits and commissions. This system caused delays and inconsistencies, as employees could input and edit information freely, leading to a lack of standardization and reliability.</p>
+                <p>A previously nonexistent place where Italian citizens can read and learn more about the European elections, Italian parties, and candidates in an accessible and user-friendly way.</p>
                 <h2>Solution:</h2>
-                <p>A web-based system that centralizes sales records in a database, with role-based authentication and authorization for travel agents and management staffs.</p>
+                <p>Chi Voto provides information about the electoral process for the European elections, including how to vote, the Italian parties with their respective electoral programs, and the list of candidates. Additionally, the portal serves as a tool to support a democratic electoral process by giving candidates who lack a digital presence the opportunity to have one.</p>
                 <h2>More info</h2>
                 <ul>
-                    <li>A comprehensive full-stack application was developed using cutting-edge technologies. The frontend was built with TypeScript and Angular, while the backend utilized Java with Spring Boot, providing users with a robust and integrated experience;</li>
+                    <li>Cristina Guarda, one of the candidates we provided visibility to on our platform, has been elected to the European Parliament. Watch her <a href="https://www.instagram.com/reel/C762p7Jo5dB/?igsh=dGJ2OHN0cnQ3MXB1" target="_blank">video</a>;</li>
+                    <li>In 21 days reached 3,677 access all over 10 countries. Report can be seen <a href="https://drive.google.com/file/d/1wxCV-JynoF87019jHSZQDD60kGIn4Oih/view?usp=share_link" target="_blank"> here</a>.</li>
+                    
                 </ul>
             </div>
     </div>
@@ -123,6 +125,9 @@
             <div class="buttons">
                 <a href="https://wjrturismo.com.br" target="_blank"><p>Access project</p></a><img width="10px" height="10px" src="./assets/arrow.webp">
             </div>
+            <p style="margin: .5rem 0;">* Due to a technical issue between the hosting provider and my client, a login is required to access the live home page. The login details are provided below.</p>
+            <p>Watch the selling management system's <a href="https://www.linkedin.com/posts/max-victor_java-angular-fullstackdeveloper-activity-7175823351469228033-bRnb?utm_source=share&utm_medium=member_desktop" target="_blank">video</a>.</p>
+            <p style="background-color:lightgray; border-top-right-radius: .5rem; border-bottom-right-radius: .5rem; border-left: solid 5px darkgrey; padding: .5rem; width: 55%; margin: .5rem 0;"> username: wjrturis <br> password: XcjyNqRh</p>
         </div>
         <hr>
         <div class="text">
