--- a/src/app/pages/projects/projects.component.css
+++ b/src/app/pages/projects/projects.component.css
@@ -22,6 +22,11 @@
         margin-bottom: .2rem;
     }
 
+    h3{
+        margin-bottom: .2rem;
+        font-style: italic;
+    }
+
 
     .imgButtons{
         display: flex;
@@ -109,7 +114,14 @@
             background-color: #1f4ad6;
         }
 
-    }
+        }
+
+        p a {
+            text-decoration: none;
+            color: #141E46;
+            font-weight: 600;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
     }
         
 }
@@ -121,6 +133,14 @@ ul{
     li{
         padding: .2rem;
         margin-left: 2rem;
+
+        a{
+            text-decoration: none;
+            color: #141E46;
+            font-weight: 600;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            
+        }
     }
 }
 
@@ -131,7 +151,11 @@ app-project-card{
 
 @media(max-width:430px){
     .imgButtons{
-        width: 320px;  
+        width: 320px; 
+        
+        p{
+            text-align: justify;
+        }
     }
     .imgButtons .projectimg{
         width: 100%;
