--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -16,7 +16,10 @@
                 > Projects</a> |
             </li>
             <li>
-               <a href="#">  Resume </a>
+               <a routerLink="cv"
+               routerLinkActive="page-activated"
+               ariaCurrentWhenActive="page">
+                 Resume </a>
             </li>
         </ul>
 
