--- a/src/app/pages/cv/cv.component.html
+++ b/src/app/pages/cv/cv.component.html
@@ -1,1 +1,4 @@
-<p>cv works!</p>
+
+<div style="width: 100%; height: 95vh;">
+    <iframe id="cvgoogle" width="100%" height="100%"  src="https://docs.google.com/document/d/e/2PACX-1vQcMgHYb2dw7HjpKeYOUaB0KQpzw1JyOPi6sHOpiHILD7SFUUEYhHODVUEo2vJyUw/pub?embedded=true"></iframe>
+</div>
